[package]
name = "MemeforAnyone"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
config = "0.15.19"
dotenvy = "0.15.7"
futures = "0.3.31"
opendal = { version = "0.55.0", features = ["services-s3", "services-fs"] }
qdrant-client = "1.16.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
